@@ -3,6 +3,9 @@
 	* avatar.c (avt_pager):
 	make sure the close button doesn't collide with textfield
 
+	* lua/lua-akfavatar-prg.c (check_filename, ask_file):
+	also show header files (*.h) as text
+
 2011-03-31  Andreas K. Foerster  <info@akfoerster.de>
 
 	* lua/lua-avt.c (luaopen_akfavatar): create a reusable silent sound
